# hildebert

./: .gitignore  pyproject.toml  readme.md
hildebert/: __init__.py  main.py  memory.py
hildebert/tools/: tools.md
